# peerclaw

./: .dockerignore  .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  README.md  build.rs  docker-compose.yml  rust_info.txt
docs/: AGENTS.md  ARCHITECTURE.md  P2P_A2A_FOUNDATION.md  P2P_PROTOCOL.md  PEERCLAWD-TOKEN-ECONOMY.md  QUICKSTART.md  SECURITY.md  TOKENS.md  v0.5-plan.md
prompts/: agent_legacy_default_name_fmt.txt  agent_legacy_tool_block.txt  agent_recalled_memories_header.txt  agent_runtime_instructions_fmt.txt  agent_runtime_prior_conversation_header.txt  agent_runtime_task_body_suffix.txt  agentic_mcp_only_intro.txt  agentic_mcp_tools_header.txt  agentic_system_intro.txt  agentic_tools_header.txt  crew_agent_system_fmt.txt  crew_worker_prompt_fmt.txt  unified_all_calls_blocked.txt  unified_all_tools_failed_suffix.txt  unified_assistant_turn_marker.txt  unified_compact_retry_suffix.txt  unified_conversation_user_label.txt  unified_empty_final_reply.txt  unified_final_turn_suffix.txt  unified_max_iters_error.txt  unified_mcp_only_tool_error.txt  unified_merge_duplicates_notice.txt  unified_preamble_nudge.txt  unified_repeat_call_warning.txt  unified_skipped_calls_notice.txt  unified_tool_results_followup.txt  unified_tool_results_header.txt  unified_url_fetch_nudge.txt  web_chat_active_skill_fmt.txt  web_chat_user_thread_header.txt  web_task_mcp_body.txt  web_task_skill_section_fmt.txt  (+1 more)
sdk/python/: pyproject.toml
sdk/python/examples/: minimal.py
sdk/python/src/peerclaw/: __init__.py  client.py  yaml_util.py
sdk/python/tests/: test_client.py
src/: lib.rs  (+6 more)
(+230 files in other folders)
